tests/baselines/reference/parserForOfStatement16.errors.txt
parserForOfStatement16.ts(1,20): error TS2304: Cannot find name 'X'.


==== parserForOfStatement16.ts (1 errors) ====
    for (var {a, b} of X) {
                       ~
!!! error TS2304: Cannot find name 'X'.
    }